# AmmarServerGames

./: README.md
frisk/: board.html
frisk/res/: board.html
frisk/res/textures/: map_full.map
score4/: CMakeLists.txt  Score4.cbp  engine.c  engine.h  score4.c
score4/res/: board.html
